<resources>
    <string name="app_name">Donotes</string>
    <string name="my_notes">My Notes</string>
    <string name="image_icon">Image Icon</string>
    <string name="link_icon">Link Icon</string>
    <string name="tick_icon">Tick Icon</string>
    <string name="add_note">Add note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_title">Note Title</string>
    <string name="note_sub_title">Note Sub Title</string>
    <string name="enter_note_here">Enter Note here</string>
    <string name="last_edited">Last Edited</string>
    <string name="more">more</string>
    <string name="color_palette">color palette</string>
    <string name="date">date</string>
    <string name="delete_button">delete button</string>
</resources>